// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline Adlib pieces Current part with preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio95",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint91",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Adlib pieces Current part with preroll and adlib preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio101",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint97",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Basic rundown 1`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "generationVersions": Object {
      "blueprintId": "mockBlueprint1",
      "blueprintVersion": "0.0.0",
      "core": "0.0.0-test",
      "studio": "asdf",
    },
    "timelineBlob": "[{\\"id\\":\\"playlist_randomId9002_status\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"while\\":1},\\"layer\\":\\"rundown_status\\",\\"content\\":{\\"deviceType\\":0},\\"classes\\":[\\"rundown_active\\"]},{\\"id\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":\\"now\\"},\\"priority\\":5,\\"layer\\":\\"\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"group\\"},\\"children\\":[],\\"isGroup\\":true,\\"isPartGroup\\":true,\\"metaData\\":{\\"isPieceTimeline\\":true}},{\\"id\\":\\"part_group_firstobject_randomId9002_part0_0_randomId9008\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"group_first_object\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"callback\\",\\"callBack\\":\\"partPlaybackStarted\\",\\"callBackData\\":{\\"rundownPlaylistId\\":\\"playlist_randomId9002\\",\\"partInstanceId\\":\\"randomId9002_part0_0_randomId9008\\"},\\"callBackStopped\\":\\"partPlaybackStopped\\"},\\"inGroup\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"classes\\":[]},{\\"id\\":\\"piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"group\\"},\\"children\\":[],\\"inGroup\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"isGroup\\":true,\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"vt0\\",\\"priority\\":5,\\"metaData\\":{\\"pieceId\\":\\"randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"isPieceTimeline\\":true}},{\\"id\\":\\"piece_group_firstobject_randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"vt0_firstobject\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"callback\\",\\"callBack\\":\\"piecePlaybackStarted\\",\\"callBackData\\":{\\"rundownPlaylistId\\":\\"playlist_randomId9002\\",\\"pieceInstanceId\\":\\"randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"dynamicallyInserted\\":false},\\"callBackStopped\\":\\"piecePlaybackStopped\\"},\\"classes\\":[\\"current_part\\"],\\"inGroup\\":\\"piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001\\"}]",
    "timelineHash": "randomId9017",
  },
]
`;

exports[`Timeline Basic rundown 2`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "generationVersions": Object {
      "blueprintId": "mockBlueprint1",
      "blueprintVersion": "0.0.0",
      "core": "0.0.0-test",
      "studio": "asdf",
    },
    "timelineBlob": "[{\\"id\\":\\"playlist_randomId9002_status\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"while\\":1},\\"layer\\":\\"rundown_status\\",\\"content\\":{\\"deviceType\\":0},\\"classes\\":[\\"rundown_active\\"]},{\\"id\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":100000,\\"setFromNow\\":true},\\"priority\\":5,\\"layer\\":\\"\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"group\\"},\\"children\\":[],\\"isGroup\\":true,\\"isPartGroup\\":true,\\"metaData\\":{\\"isPieceTimeline\\":true}},{\\"id\\":\\"part_group_firstobject_randomId9002_part0_0_randomId9008\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"group_first_object\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"callback\\",\\"callBack\\":\\"partPlaybackStarted\\",\\"callBackData\\":{\\"rundownPlaylistId\\":\\"playlist_randomId9002\\",\\"partInstanceId\\":\\"randomId9002_part0_0_randomId9008\\"},\\"callBackStopped\\":\\"partPlaybackStopped\\"},\\"inGroup\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"classes\\":[]},{\\"id\\":\\"piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"group\\"},\\"children\\":[],\\"inGroup\\":\\"part_group_randomId9002_part0_0_randomId9008\\",\\"isGroup\\":true,\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"vt0\\",\\"priority\\":5,\\"metaData\\":{\\"pieceId\\":\\"randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"isPieceTimeline\\":true}},{\\"id\\":\\"piece_group_firstobject_randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"objectType\\":\\"rundown\\",\\"enable\\":{\\"start\\":0},\\"layer\\":\\"vt0_firstobject\\",\\"content\\":{\\"deviceType\\":0,\\"type\\":\\"callback\\",\\"callBack\\":\\"piecePlaybackStarted\\",\\"callBackData\\":{\\"rundownPlaylistId\\":\\"playlist_randomId9002\\",\\"pieceInstanceId\\":\\"randomId9002_part0_0_randomId9008_randomId9002_piece001\\",\\"dynamicallyInserted\\":false},\\"callBackStopped\\":\\"piecePlaybackStopped\\"},\\"classes\\":[\\"current_part\\"],\\"inGroup\\":\\"piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001\\"}]",
    "timelineHash": "randomId9020",
  },
]
`;

exports[`Timeline Basic rundown 3`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "generationVersions": Object {
      "blueprintId": "mockBlueprint0",
      "blueprintVersion": "0.0.0",
      "core": "0.0.0-test",
      "studio": "asdf",
    },
    "timelineBlob": "[]",
    "timelineHash": "randomId9025",
  },
]
`;

exports[`Timeline In transitions Basic inTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio11",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint7",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with contentDelay + preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio35",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint31",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with contentDelay 1`] = `
Array [
  Object {
    "_id": "mockStudio29",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint25",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with planned pieces 1`] = `
Array [
  Object {
    "_id": "mockStudio17",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint13",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio23",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint19",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions inTransition disabled 1`] = `
Array [
  Object {
    "_id": "mockStudio59",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint55",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions inTransition is disabled during hold 1`] = `
Array [
  Object {
    "_id": "mockStudio53",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint49",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9024",
  },
]
`;

exports[`Timeline In transitions inTransition with existing infinites 1`] = `
Array [
  Object {
    "_id": "mockStudio41",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint37",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9022",
  },
]
`;

exports[`Timeline In transitions inTransition with new infinite 1`] = `
Array [
  Object {
    "_id": "mockStudio47",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint43",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9022",
  },
]
`;

exports[`Timeline Out transitions Basic outTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio65",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint61",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + inTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio83",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint79",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + preroll (2) 1`] = `
Array [
  Object {
    "_id": "mockStudio77",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint73",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio71",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint67",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition is disabled during hold 1`] = `
Array [
  Object {
    "_id": "mockStudio89",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint85",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9024",
  },
]
`;
